--- a/app/21card/views/cardproduct.html
+++ b/app/21card/views/cardproduct.html
@@ -187,7 +187,7 @@
 
 
 
-<div class="panel panel-success">
+<div class="panel panel-default">
   <div class="panel-heading">卡产品资源</div>
 
 <div class="panel-body">
@@ -265,7 +265,7 @@
 
 
 
-<div class="panel panel-success" ng-show="resourcesflag.pool !== undefined">
+<div class="panel panel-default" ng-show="resourcesflag.pool !== undefined">
   <div class="panel-heading">卡池</div>
 
 <div class="panel-body">
@@ -325,7 +325,7 @@
 
 
 
-<div class="panel panel-success" ng-show="resourcesflag.ticket !== undefined">
+<div class="panel panel-default" ng-show="resourcesflag.ticket !== undefined">
   <div class="panel-heading">票销售品</div>
 
 <div class="panel-body">
