--- a/app/21card/views/basecardlist.html
+++ b/app/21card/views/basecardlist.html
@@ -29,8 +29,8 @@
     </div>
 </div><!-- searchArea -->
 
-  <div class="col-md-12 panel panel-default table-responsive">
-  <table class="table table-bordered">
+<div class="col-md-12 panel panel-default table-responsive">
+    <table class="table table-bordered">
     <thead>
       <tr>
         <th class="col-md-3 text-center">卡段</th>
@@ -60,18 +60,17 @@
         </td>
       </tr>
     </tbody>
-  </table>
-  </div>
+    </table>
+</div>
 
-<!--   <div class="text-right">
-
+    <div class="text-right">
     <uib-pagination 
       total-items="bigTotalItems" 
       ng-model="bigCurrentPage" 
       max-size="maxSize" 
       class="pagination-sm" 
       boundary-links="true" 
-      ng-change="load()"
+      ng-change="search()"
       items-per-page="itemsPerPage"
       previous-text="上一页"
       next-text="下一页"
@@ -79,8 +78,4 @@
       last-text="末页"
       rotate="false">
     </uib-pagination>
-
-  </div> -->
-  
-
-</div>
+    </div> 
