--- a/app/21card/views/cardpoollist.html
+++ b/app/21card/views/cardpoollist.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" role="form">  
+  
   
 <div class="col-sm-12">
 <div class="panel panel-default">
@@ -15,8 +15,8 @@
 </div>
 
 
-  <div class="col-md-12 panel panel-default table-responsive">
-     <table ng-click="getlist()" class="table table-bordered">
+    <div class="col-md-12 panel panel-default table-responsive">
+    <table ng-click="getlist()" class="table table-bordered">
 	    <thead>
 	      <tr>
 	        <th class="col-md-2 text-center">卡池编号</th>
@@ -42,18 +42,19 @@
 	        </td>
 	      </tr>
 	    </tbody>
-	  </table>
-	</div>	    
-    </div>
-    <div class="text-right">
+	</table>
+    </div>	    
 
+
+
+    <div class="text-right">
     <uib-pagination 
       total-items="bigTotalItems" 
       ng-model="bigCurrentPage" 
       max-size="maxSize" 
       class="pagination-sm" 
       boundary-links="true" 
-      ng-change="load()"
+      ng-change="getlist()"
       items-per-page="itemsPerPage"
       previous-text="上一页"
       next-text="下一页"
@@ -61,8 +62,7 @@
       last-text="末页"
       rotate="false">
     </uib-pagination>
-</div> 
+    </div> 
   
 
 
- </form>
