--- a/app/21card/views/relief.html
+++ b/app/21card/views/relief.html
@@ -1,39 +1,36 @@
+<div class="modal-header">
+    <h4 class="modal-title">释放卡</h4>
+</div>
 <div class="col-xs-12" >
-<div class="panel panel-default">
-<div class="panel-heading text-center">释放卡</div>
+<div class="panel panel-default mt10">
+
 <div class="panel-body">
     <div class="form-group form-inline">
-		<label class="col-md-0 radio-inline ">
+        <div class="row">
+		<label class="col-xs-0 col-md-offset-1 radio-inline" vertical-align="middle">
         <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="2" ng-model="cardinfo.status">单张</label>&nbsp;&nbsp;
 		<input type="text" class="form-control" placeholder="卡号"
 			ng-model="cardinfo.cardnum" style="width:200px">
-		
+		</div>
+		<div class="row mt10">
 		<label class="col-md-offset-1 radio-inline ">
-        <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="3" ng-model="cardinfo.status">卡段</label>&nbsp;&nbsp;
-        <input type="text" class="form-control" placeholder="起始卡号"
+             <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="3" ng-model="cardinfo.status">卡段</label>&nbsp;&nbsp;
+		<input type="text" class="form-control" placeholder="起始卡号"
 			ng-model="cardinfo.startnum" style="width:200px">
-		
-		&nbsp;&nbsp;<label class="col-md-0">到</label>&nbsp;&nbsp;
-		
-			<input type="text" class="form-control" placeholder="结束卡号"
+		&nbsp;&nbsp;<label>到</label>&nbsp;&nbsp;
+		<input type="text" class="form-control" placeholder="结束卡号"
 			ng-model="cardinfo.endnum" style="width:200px">
-		
+		</div>
+		<div class="row mt10">
 		<label class="col-md-offset-1 radio-inline ">
-              <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.status">全部</label>
-		
-        <button type="button" class="btn btn-info search pull-right" ng-click="resivecard()" style="width:100px">释放卡<button>        
-    </div>
-</div>
-</div>
-</div>
-</div>
+              <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1" ng-model="cardinfo.status">全部</label>	
+		</div>
 
-
-<div class="col-md-5">
-     <table ng-click="getlist()" class="table table-bordered">
+     <div class="col-sm-12 row mt10 text-center" style="width:570px">
+     <table class="table table-bordered panel panel-default table-responsive">
 	    <thead>
 	      <tr>
-	      <th class="col-md-1 text-center">操作</th>
+	        <th class="col-md-1 text-center">操作</th>
 	        <th class="col-md-2 text-center">起始卡号</th>
 	        <th class="col-md-2 text-center">结束卡号</th>
 	        
@@ -41,7 +38,7 @@
 	    </thead>
 	    <tbody>
 	     <tr ng-repeat = "cardinfo in releasecardinfo">
-	       <td class="col-md-1 text-center"> 
+           <td class="col-md-1 text-center"> 
            <input type="checkbox" ng-model=cardinfo.value ng-true-value="1"ng-false-value="0" ng-click="checkcardinfo()">
            </td>
 	       <td class="col-md-2 text-center">{{cardinfo.mincard}}</td>
@@ -49,7 +46,18 @@
 	     </tr>
 	    </tbody>
 	 </table>
-</div><!-- 可用卡 -->
+	 </div>
 
-
-
+        
+    </div>
+</div>
+</div>
+</div>
+</div>
+  
+</div>
+</div>
+<div class="modal-footer">
+    <button class="btn btn-primary" type="button" ng-click="ok()">释放卡</button>
+    <button class="btn btn-warning" type="button" ng-click="cancel()">返回</button>
+</div>
