--- a/app/21card/views/cardproduct.html
+++ b/app/21card/views/cardproduct.html
@@ -279,6 +279,7 @@
 			<select class="form-control" ng-model="cardpoolobj.pool_code" 
               ng-options="cardpool.pool_code as cardpool.pool_name for cardpool in cardpoolarr"
             >
+            <option value="">全部</option>
             </select>
 		</div>
 		<div class="col-xs-2" >
