--- a/app/21card/views/addcard.html
+++ b/app/21card/views/addcard.html
@@ -50,7 +50,7 @@
       max-size="maxSize" 
       class="pagination-sm" 
       boundary-links="true" 
-      ng-change="search()"
+      ng-change="getunusedcard()"
       items-per-page="itemsPerPage"
       previous-text="上一页"
       next-text="下一页"
