--- a/app/21card/views/cardproductlist.html
+++ b/app/21card/views/cardproductlist.html
@@ -53,7 +53,7 @@
   </table>
   </div>
 
-<!--   <div class="text-right">
+   <div class="text-right">
 
     <uib-pagination 
       total-items="bigTotalItems" 
@@ -61,7 +61,7 @@
       max-size="maxSize" 
       class="pagination-sm" 
       boundary-links="true" 
-      ng-change="load()"
+      ng-change="search()"
       items-per-page="itemsPerPage"
       previous-text="上一页"
       next-text="下一页"
@@ -70,7 +70,7 @@
       rotate="false">
     </uib-pagination>
 
-  </div> -->
+  </div> 
   
 
 </div>
