--- a/app/21card/views/relief.html
+++ b/app/21card/views/relief.html
@@ -47,7 +47,25 @@
 	    </tbody>
 	 </table>
 	 </div>
+     
+     <div class="text-right">
 
+    <uib-pagination 
+      total-items="bigTotalItems" 
+      ng-model="bigCurrentPage" 
+      max-size="maxSize" 
+      class="pagination-sm" 
+      boundary-links="true" 
+      ng-change="canreleasecard()"
+      items-per-page="itemsPerPage"
+      previous-text="上一页"
+      next-text="下一页"
+      first-text="首页"
+      last-text="末页"
+      rotate="false">
+    </uib-pagination>
+
+  </div>
         
     </div>
 </div>
