--- a/app/21card/views/cardproduct.html
+++ b/app/21card/views/cardproduct.html
@@ -372,7 +372,7 @@
 	<button 
     type="button" 
     class="btn btn-info col-xs-1 pull-right" 
-    ng-click="gogo()"
+    ng-click="submit()"
     >
     提交
     </button>
