--- a/app/21card/views/cardproductinfo.html
+++ b/app/21card/views/cardproductinfo.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12" >
-<div class="panel panel-success">
+<div class="panel panel-default">
   <div class="panel-heading">卡产品信息</div>
 
 <div class="panel-body">
@@ -167,11 +167,75 @@
 			></textarea>
 		</div>
 	</div>
-
-	
-
+</div>
+</div>
+</div>
 </div>
 
+<div class="panel panel-default">
+<div class="panel-heading">卡产品绑定资源列表</div>
+<div class="panel-body">
+<div class="container-fluid form-horizontal ">
+<div class="col-xs-10 col-xs-offset-1 form-horizontal" >
+    <div class="panel panel-default col-xs-8 col-xs-offset-2">
+		<table class="table">
+        <tbody>
+          <tr ng-repeat="res in resources">
+            <td>{{res.sub_table_name}}</td>
+            <td>{{res.sub_table_data_name}}</td>
+            <td>{{res.sub_table_used_name}}</td>
+            
+          </tr>
+        </tbody>
+      </table>
+	</div>
+</div>
+</div>
+</div>
+</div>
+
+
+
+
+<div class="panel panel-default">
+<div class="panel-heading">卡产品绑定卡池列表</div>
+<div class="panel-body">
+<div class="container-fluid form-horizontal ">
+<div class="col-xs-10 col-xs-offset-1 form-horizontal" >
+	<div class="panel panel-default col-xs-8 col-xs-offset-2">
+		<table class="table">
+        <tbody>
+          <tr ng-repeat="cardpool in cardproduct_cardpoollistarr">
+            <td>{{cardpool.pool_name}}</td>
+            
+          </tr>
+        </tbody>
+      </table>
+	</div>
+</div>
+</div>
+</div>
+</div>
+
+
+
+
+<div class="panel panel-default">
+<div class="panel-heading">卡产品绑定票销售品列表</div>
+<div class="panel-body">
+<div class="container-fluid form-horizontal ">
+<div class="col-xs-10 col-xs-offset-1 form-horizontal" >
+	<div class="panel panel-default col-xs-8 col-xs-offset-2">
+		<table class="table">
+        <tbody>
+          <tr ng-repeat="ticket in cardproduct_ticketarr">
+            <td>{{ticket.ticket_code}}</td>
+            
+          </tr>
+        </tbody>
+      </table>
+	</div>
+</div>
 </div>
 </div>
 </div>
