--- a/app/21card/views/cardproduct.html
+++ b/app/21card/views/cardproduct.html
@@ -277,8 +277,7 @@
 		<label class="col-xs-2 control-label">选择卡池</label>
 		<div class="col-xs-8">
 			<select class="form-control" ng-model="cardpoolobj.pool_code" 
-              ng-options="cardpool.pool_code as cardpool.pool_name for cardpool in cardpoolarr"
-            >
+              ng-options="cardpool.pool_code as cardpool.pool_name for cardpool in cardpoolarr">
             <option value="">全部</option>
             </select>
 		</div>
