--- a/app/style/app.css
+++ b/app/style/app.css
@@ -16,6 +16,7 @@ body {
 .mb10{margin-bottom: 10px;}
 .mb20{margin-bottom: 20px;}
 .ml20{margin-left: 20px;}
+.mr15{margin-right: 15px;}
 .fl{float:left;}
 
 body { /*padding-bottom: 70px;*/ }
@@ -332,55 +333,55 @@ fieldset[disabled] .navbar-default .btn-link:focus {
  */
 
 /* Move down content because we have a fixed navbar that is 50px tall */
-body {
-  /*padding-top: 50px;*/
-}
+/*body {
+  padding-top: 50px;
+}*/
 
 
 /*
  * Global add-ons
  */
 
-.sub-header {
+/*.sub-header {
   padding-bottom: 10px;
   border-bottom: 1px solid #eee;
-}
+}*/
 
 /*
  * Top navigation
  * Hide default border to remove 1px line.
  */
-.navbar-fixed-top {
+/*.navbar-fixed-top {
   border: 0;
-}
+}*/
 
 /*
  * Sidebar
  */
 
 /* Hide for mobile, show later */
-.sidebar {
+/*.sidebar {
   display: none;
 }
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 51px;
+    top: 50px;
     bottom: 0;
     left: 0;
     z-index: 1000;
     display: block;
     padding: 20px;
     overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    overflow-y: auto; 
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
   }
-}
+}*/
 
 /* Sidebar navigation */
-.nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
+/*.nav-sidebar {
+  margin-right: -21px; 
   margin-bottom: 20px;
   margin-left: -20px;
 }
@@ -393,14 +394,14 @@ body {
 .nav-sidebar > .active > a:focus {
   color: #fff;
   background-color: #428bca;
-}
+}*/
 
 
 /*
  * Main content
  */
 
-.main {
+/*.main {
   padding: 20px;
 }
 @media (min-width: 768px) {
@@ -411,14 +412,14 @@ body {
 }
 .main .page-header {
   margin-top: 0;
-}
+}*/
 
 
 /*
  * Placeholder dashboard ideas
  */
 
-.placeholders {
+/*.placeholders {
   margin-bottom: 30px;
   text-align: center;
 }
@@ -431,4 +432,17 @@ body {
 .placeholder img {
   display: inline-block;
   border-radius: 50%;
+}*/
+
+
+
+
+/*#nav1 .navbar-text {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
+
+#nav1 .navbar-nav > li > a{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}*/
