--- a/app/21card/views/issuecard.html
+++ b/app/21card/views/issuecard.html
@@ -22,7 +22,7 @@
    <label for="inputDate" class="col-md-4 control-label">拿/退卡人姓名：</label>
    <div class="col-md-6">
    <select class="form-control" ng-model="searchinfo"  ng-options ="obj as obj.name for obj in objs" ng-change="selection(searchinfo)">
- 	<option value="">全部</option>
+ 	 <option value="">请选择</option>
    </select>
    </div>    
  </div>
