--- a/app/07product/views/tktskgoods.html
+++ b/app/07product/views/tktskgoods.html
@@ -45,7 +45,7 @@
         <td class="text-center">
         	<a ng-click="edit(obj)" class="btn btn-success btn-xs">设置分销价</a>
             <a ng-click="reward(obj)" class="btn btn-info btn-xs">政策奖励</a>
-            <a ng-click="bind(obj)" class="btn btn-default btn-xs">绑定中间商</a>
+            <a ng-click="bind(obj.sale_code)" class="btn btn-default btn-xs">绑定中间商</a>
 
         </td>
 
