--- a/app/21card/views/offsale.html
+++ b/app/21card/views/offsale.html
@@ -7,7 +7,7 @@
             <div class="form-group">
                 <label class="col-xs-2 control-label">下架原因</label>
                 <div class="col-md-4">
-      <input type="text" class="form-control" id="inputpoolname" placeholder="** ** ** ** ** ** **"
+      <input type="text" class="form-control" id="inputpoolname" placeholder=""
       ng-model="obj.off_reason"
       >
     </div>
