--- a/app/07product/views/middlebusiness.html
+++ b/app/07product/views/middlebusiness.html
@@ -4,10 +4,10 @@
         <div class="col-xs-12">
 
             <div class="form-group">
-                <label class="col-xs-2 control-label">账号</label>
+                <label class="col-xs-3 control-label">中间商编号</label>
                 <div class="col-md-4">
       <input type="text" class="form-control" id="inputpoolname" placeholder=""
-      ng-model="obj.off_reason"
+      ng-model="obj.middle_business_code"
       >
     </div>
             </div>
