--- a/app/21card/views/resivecardinfo.html
+++ b/app/21card/views/resivecardinfo.html
@@ -19,7 +19,7 @@
 </div><!-- 根据卡号查询用户信息 -->
 
    <div class="col-md-12 panel panel-default table-responsive">
-     <table ng-click="getlist()" class="table table-bordered">
+     <table ng-click="getlist()" class="table table-bordered" style="height: 80px">
 	    <thead>
 	      <tr>
 	        <th class="col-md-2 text-center">姓名</th>
@@ -31,15 +31,12 @@
 	    </thead>
 	    <tbody>
 	    	<tr>
-	        <td class="col-md-2 text-center">{{userinfo.username}}</td>
-	        <td class="col-md-2 text-center">{{userinfo.mobile}}</td>
-	        <td class="col-md-2 text-center">{{userinfo.papersno}}</td>
-	        <td class="col-md-2 text-center">{{userinfo.card_status_z}}</td>
-	        <td class="col-md-4 text-center">
-	        	<a ng-show="userinfo.card_status_z=='未发放'" ng-click="used()" class="btn btn-primary btn-xs">置为已用</a>
-	        	<a ng-show="userinfo.card_status_z=='已发放' " ng-click="lost()" class="btn btn-danger btn-xs">挂失</a>
-	        	
-	        	
+	        <td class="col-md-2 text-center">{{obj.username}}</td>
+	        <td class="col-md-2 text-center">{{obj.mobile}}</td>
+	        <td class="col-md-3 text-center">{{obj.papersno}}</td>
+	        <td class="col-md-2 text-center">{{obj.card_status_z}}</td>
+	        <td class="col-md-3 text-center">
+	        	<a ng-show="obj.card_status_z=='已生效' " ng-click="lost()" class="btn btn-danger btn-xs">挂失</a>	
 	        </td>
 	      </tr>
 	    </tbody>
