--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -202,6 +202,90 @@
 	                  		</form>
 	                  		&nbsp;&nbsp;&nbsp;&nbsp;
 						</div>
+
+					<div class="form-group">
+						<form class="form-inline">
+							<label class="col-xs-3 control-label">
+								不可用日期
+							</label>&nbsp;&nbsp;
+							<div class="input-group">
+								<input 	type="text"
+										class="form-control"
+										ng-model="mid"
+										uib-datepicker-popup="yyyy-MM-dd"
+										is-open="section.unavailableDates.opened"
+										ng-required="true"
+										close-text="Close"
+										readonly>
+								<span 	class="input-group-btn inline">
+			                        <button type="button" 
+			                        		class="btn btn-default"
+			                        		ng-click="open(section.unavailableDates)">
+			                        	<i class="glyphicon glyphicon-calendar"></i>
+			                        </button>
+			                    </span>
+							</div>
+							<div class="input-group">
+								<button class="btn btn-primary inline"
+										ng-click="adddate()"	>
+			                    	<span class="glyphicon glyphicon-plus"></span> 添加
+			                    </button>
+							</div>
+	                    </form>
+					</div>
+					<div class="form-group">
+						<form class="form-inline">
+							<label class="col-xs-3 control-label">
+								已选不可用日期
+							</label>&nbsp;&nbsp;
+							<div class="input-group">
+									<div 	class="ss-item text-center"
+											ng-repeat="obj in arrdate">
+										{{obj}}
+										<span 	class="glyphicon glyphicon-remove" 
+						          				ng-click="deldate($index)"></span>
+									</div>&nbsp;
+							</div>
+						</form>
+					</div>
+					<div class="form-group">
+						<form class="form-inline">
+							<label class="col-xs-3 control-label">
+								每周可用日期
+							</label>&nbsp;&nbsp;
+							<div class="input-group">
+								<input 	type="checkbox" 
+										name="use_rule" 
+										value="1"
+										ng-model="use_rule[0]">周一&nbsp;&nbsp;
+								<input 	type="checkbox" 
+										name="use_rule" 
+										value="2"
+										ng-model="use_rule[1]">周二&nbsp;&nbsp;
+								<input 	type="checkbox" 
+										name="use_rule" 
+										value="3"
+										ng-model="use_rule[2]">周三&nbsp;&nbsp;
+								<input 	type="checkbox" 
+										name="use_rule" 
+										value="4"
+										ng-model="use_rule[3]">周四&nbsp;&nbsp;
+								<input 	type="checkbox" 
+										name="use_rule" 
+										value="5"
+										ng-model="use_rule[4]">周五&nbsp;&nbsp;
+								<input 	type="checkbox" 
+										name="use_rule" 
+										value="6"
+										ng-model="use_rule[5]">周六&nbsp;&nbsp;
+								<input 	type="checkbox" 
+										name="use_rule" 
+										value="7"
+										ng-model="use_rule[6]">周日&nbsp;&nbsp;
+							</div>
+						</form>
+					</div>
+                    
 					
 
 					<div class="form-group mt10">
@@ -308,6 +392,19 @@
 				  	</div>
 
 				  	<div class="form-group">
+					    <label class="col-xs-3 control-label">每单最大购买数量限制</label>
+					    <div class="col-xs-2">
+					    	<input type="number" class="form-control" 
+							ng-model="saleobj.order_num_limit"
+							>
+							
+					    </div>
+					    <div class="col-sm-5">
+					      <p class="form-control-static text-danger" >0:不限，其他数字:限制购买个数</p>
+					    </div>
+				  	</div>
+
+				  	<div class="form-group">
 					    <label class="col-xs-3 control-label">是否启用出游时间</label>
 					    <div class="col-xs-2">
 					    	<label class="radio-inline">
@@ -377,10 +474,22 @@
 							  > 实名制
 							</label>
 					    </div>
-					    <!-- <div class="col-xs-7">
-					      <p class="form-control-static text-danger" >
-					      该选项请慎重使用，如果选择’不出票‘该销售品将不会出票也不发短信！</p>
-					    </div> -->
+				  	</div>
+
+				  	<div class="form-group">
+					    <label class="col-xs-3 control-label">短信票码类型</label>
+					    <div class="col-xs-9">
+					    	<label class="radio-inline">
+							  <input type="radio" name="sms_ticketcode_type" value="0"
+							  ng-model="saleobj.sms_ticketcode_type"
+							  > 票码
+							</label>
+							<label class="radio-inline">
+							  <input type="radio" name="sms_ticketcode_type" value="1"
+							  ng-model="saleobj.sms_ticketcode_type"
+							  > 订单唯一码
+							</label>
+					    </div>
 				  	</div>
 
 
