--- a/app/21card/views/resivecardinfo.html
+++ b/app/21card/views/resivecardinfo.html
@@ -10,7 +10,7 @@
                 <label>卡号</label>&nbsp;&nbsp;
                 <input type="text" class="form-control" ng-model="cardinfo.cardno" style="width:150px">
                 &nbsp;&nbsp;&nbsp;&nbsp;
-                  <button type="button" class="btn btn-primary search pull-right" ng-click="queryuser()">查询</button>
+                  <button type="button" class="btn btn-primary search pull-right" ng-click="queryuser(cardinfo.cardno)">查询</button>
 
 
             </div>
