--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -238,7 +238,7 @@
 							<label class="col-xs-3 control-label">
 								已选不可用日期
 							</label>&nbsp;&nbsp;
-							<div class="input-group">
+							<div class="input-group col-xs-9">
 									<div 	class="ss-item text-center"
 											ng-repeat="obj in arrdate">
 										{{obj}}
