--- a/app/21card/views/cardorderlist.html
+++ b/app/21card/views/cardorderlist.html
@@ -80,9 +80,7 @@
       <td class="text-center">{{obj.code}}</td>
       <td class="text-center">{{obj.create_time}}</td>
       <td class="text-center">
-        <button type="button" class="btn btn-primary btn-sm" ng-click="info(obj.code)">
-          查看详情
-        </button>
+      <a ng-click="orderinfo(obj.code)" class="btn btn-success btn-xs">查看详情</a>
       </td>
     </tr>
     
