--- a/app/22busscustomer/views/skacountlist.html
+++ b/app/22busscustomer/views/skacountlist.html
@@ -55,7 +55,7 @@
         <td class="text-center">{{obj.area}}</td>
         <td class="text-center">{{obj.trade}}</td>
         <td class="text-center">{{obj.ins_time}}</td>
-        <td class="text-center">{{obj.state}}</td>
+        <td class="text-center">{{obj.state_name}}</td>
         <td class="text-center">{{obj.sms_state}}</td>
         <td class="text-center">
            <a ng-show="obj.state=='未处理'&&obj.sms_state == '未发送'" ng-click="pass(obj.id,obj.ticket_id)" class="btn btn-danger btn-xs">通过</a>
