--- a/app/22busscustomer/views/assignauthority.html
+++ b/app/22busscustomer/views/assignauthority.html
@@ -1,15 +1,64 @@
-<div class="col-sm-12">
+<div class="col-xs-4 col-xs-offset-4" >
 <div class="panel panel-default">
+<div class="panel-heading text-center">一级商客权限申请</div>
+<div class="panel-body">
+<div class="container-fluid form-horizontal ">
+    <div class="panel panel-default">
     <div class="panel-body">
-        <div class="form-group form-inline">
-            <div class="col-sm-12 row">
-                  <input type="text" class="form-control" ng-model="searchform.name" placeholder="一级商客账号" style="width:250px">
-                  &nbsp;&nbsp;&nbsp;&nbsp;
-                  <div class="form-group pull-right">
-                      <button type="button" class="btn btn-success" ng-click="create()">提交</button>
-                      
-                  </div>
-            </div>
+    <div class="col-sm-12" style="height: 40px">
+        <div class="form-group form-inline ">
+            <input type="text" class="form-control" ng-model="searchinfo.bind_company_code" placeholder="一级商客账号">
+            <button type="button" class="btn btn-primary pull-right" ng-click="saveauthority()">添加</button>
         </div>
     </div>
-</div><!-- searchArea -->
+    </div>
+    </div><!-- searchArea -->
+
+    <div class="col-md-12 panel panel-default table-responsive">
+    <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th class="col-md-6">账号</th>
+        
+        
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="obj in objs">
+        <td class="text-center">{{obj}}</td>
+      </tr>
+    </tbody>
+    </table>
+    </div>
+
+    <!-- <div class="text-right">
+    <uib-pagination 
+      total-items="bigTotalItems" 
+      ng-model="bigCurrentPage" 
+      max-size="maxSize" 
+      class="pagination-sm" 
+      boundary-links="true" 
+      ng-change="search()"
+      items-per-page="itemsPerPage"
+      previous-text="上一页"
+      next-text="下一页"
+      first-text="首页"
+      last-text="末页"
+      rotate="false">
+    </uib-pagination>
+    </div> 
+ -->
+
+        
+  
+
+</div>
+</div>
+</div>
+</div>
+</div>
+
+
+
+
+
