--- a/app/14statistics/views/distributor.html
+++ b/app/14statistics/views/distributor.html
@@ -7,7 +7,10 @@
               <input type="text" class="form-control" ng-model="searchform.company_code" placeholder="分销商编号">
               &nbsp;&nbsp;
 
-              <input type="text" class="form-control" ng-model="searchform.view" placeholder="景区编号">
+              <!-- <input type="text" class="form-control" ng-model="searchform.view" placeholder="景区编号">
+              &nbsp;&nbsp; -->
+
+              <input type="text" class="form-control" ng-model="searchform.sale_name" placeholder="销售品名">
               &nbsp;&nbsp;
 
 
