--- a/app/07product/views/tktsale.html
+++ b/app/07product/views/tktsale.html
@@ -3,19 +3,19 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-10">
-                <label>销售品名称</label>&nbsp;&nbsp;
+                <label>销售品名称</label>
                 <input type="text" class="form-control" ng-model="searchform.name" >
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                <label>景区编号</label>&nbsp;&nbsp;
+                &nbsp;
+                <label>景区编号</label>
                 <input type="text" class="form-control" ng-model="searchform.place_code" >
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                <label>经销商</label>&nbsp;&nbsp;
+                &nbsp;
+                <label>经销商</label>
                 <select class="form-control" ng-model="searchform.seller_code" 
                   ng-options="view.CODE as view.NAME for view in taarr"
                 >
                     <option value="">全选</option>
                 </select>
-                &nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;
                 <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
             </div>
             <div class="col-sm-2 text-right">
