--- a/app/07product/views/middlebusiness.html
+++ b/app/07product/views/middlebusiness.html
@@ -1,21 +1,25 @@
+<div class="modal-header">
+    <h4 class="modal-title">奖励政策</h4>
+</div>
+
+
 <div class="modal-body">
+  <div class="container-fluid form-horizontal">
 
-    <div class="container-fluid form-horizontal ">
-        <div class="col-xs-12">
-
-            <div class="form-group">
-                <label class="col-xs-3 control-label">中间商编号</label>
-                <div class="col-md-4">
-      <input type="text" class="form-control" id="inputpoolname" placeholder=""
+  <div class="form-group">
+    <label class="col-xs-1 control-label"></label>
+    <label class="col-xs-3 control-label">中间商编号</label>
+    <div class="col-xs-6">
+      <input type="number" class="form-control"
       ng-model="obj.middle_business_code"
       >
     </div>
-            </div>
-        </div>
-
-    </div>
+  </div>
 </div>
+
 <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+    <button class="btn btn-primary" type="button" ng-click="ok()">提交</button>
     <button class="btn btn-warning" type="button" ng-click="cancel()">返回</button>
 </div>
+
+
