--- a/app/07product/views/tktskgoods.html
+++ b/app/07product/views/tktskgoods.html
@@ -44,7 +44,7 @@
         <td class="text-center">{{obj.company_price_statename}}</td>
         <td class="text-center">
         	<a ng-click="edit(obj)" class="btn btn-success btn-xs">设置分销价</a>
-            <a ng-click="reward(obj.sale_code)" class="btn btn-danger btn-xs">政策奖励</a>
+            <a ng-click="reward(obj.sale_code)" class="btn btn-danger btn-xs">奖励政策</a>
             <a ng-click="bind(obj.sale_code)" class="btn btn-info btn-xs">绑定中间商</a>
 
         </td>
