--- a/app/07product/views/distribution.html
+++ b/app/07product/views/distribution.html
@@ -1,6 +1,6 @@
 
 <div class="modal-header">
-    <h4 class="modal-title">分配经销商</h4>
+    <h4 class="modal-title">{{obj.title}}</h4>
 </div>
 <div class="modal-body">
     <div class="container-fluid form-horizontal ">
