--- a/app/07product/views/tktsale.html
+++ b/app/07product/views/tktsale.html
@@ -99,9 +99,12 @@
                 <a ng-show="obj.used_state=='1'" ng-click="usedstart(obj.id)" class="btn btn-primary btn-xs">允许消票</a>
                 <a ng-show="obj.used_state=='0'" ng-click="usedstop(obj.id)" class="btn btn-danger btn-xs">禁止消票</a>
                 <a ng-click="info(obj.id)" ng-show="obj.state == '1'" class="btn btn-warning btn-xs">详情</a>
-                <a ng-click="distribution(obj.code)" class="btn btn-default btn-xs"
+                <a ng-click="distribution(obj.code, obj.sale_target_type)" class="btn btn-default btn-xs"
                 ng-show="obj.sale_target_type == 1"
                 >分配经销商</a>
+                <a ng-click="distribution(obj.code, obj.sale_target_type)" class="btn btn-default btn-xs"
+                ng-show="obj.sale_target_type == 0"
+                >分配不允许销售经销商</a>
                   
                 <!-- <a uib-popover="{{obj.book_info}}" popover-title="预订需知" type="button" class="btn btn-default btn-xs" uib-popover="On the left">预订需知</a> -->
               </td>
