--- a/app/07product/views/tktsale.html
+++ b/app/07product/views/tktsale.html
@@ -16,11 +16,11 @@
                                 ng-model="searchform.place_code"
                                 placeholder="景区编号" >
                         &nbsp;
-                        <label>经销商</label>
                         <select class="form-control" ng-model="searchform.seller_code" 
-                          ng-options="view.CODE as view.NAME for view in taarr"
+                                ng-options="view.CODE as view.NAME for view in taarr"
+                                placeholder="经销商"
                         >
-                            <option value="">全选</option>
+                            <option value="">--请选择经销商--</option>
                         </select>
                         &nbsp;
                         <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
