--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -114,7 +114,10 @@
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="">{{obj.title}}</td>
-        <td class="text-center"><br>{{obj.code}}</td>
+        <td class="text-center">
+          <br>{{obj.code}}<br>
+          <span ng-show="obj.out_order_id">外部：{{obj.out_order_id}}</span>
+        </td>
         <td class="text-center">{{obj.name}}<br>{{obj.mobile}}<br>{{obj.cardno}}</td>
         <td class="text-center">
           <span>购买{{obj.num}}</span><br>
