--- a/app/13order/views/orderticketlist.html
+++ b/app/13order/views/orderticketlist.html
@@ -2,7 +2,7 @@
 
 
 <div class="modal-header">
-    <h4 class="modal-title">票信息</h4>
+    <h4 class="modal-title">票信息({{order_unique_code}})</h4>
 </div>
 <div class="modal-body">
 
