--- a/app/21card/views/addcardpool.html
+++ b/app/21card/views/addcardpool.html
@@ -21,6 +21,7 @@
          <select class="form-control" ng-model="cardinfo.pool_type">
             <option value="0">基本</option>
             <option value="1">金卡</option>
+            <option value="2">商惠卡</option>
           <select>
       </div>  
     </div>
