--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -597,6 +597,69 @@
 
 
 
+<div class="col-xs-12" ng-show="funobj.hasOwnProperty('integral')" >
+	<div class="panel panel-default form-horizontal">
+		<div class="panel-heading">
+			积分配置<button type="button" 
+				class="btn btn-xs btn-info pull-right"
+				ng-show="what == 'edit' || saleobj.id == ''"
+				ng-click="salejfsave()"
+			>
+				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+			</button>
+		</div>
+		<div class="panel-body">
+			<div class="container-fluid">
+				<div class="col-xs-12" >
+
+					<div class="form-group">
+						<label class="col-xs-2 control-label">添加销售品积分</label>
+						<div class="col-xs-4">
+							<select class="form-control" ng-model="salejfobj.addtype" >
+								<option value="">--请选择类型--</option>
+								<option value="0">提现积分</option>
+								<option value="1">抵值积分</option>
+				            </select>
+				       </div>
+						<div class="col-xs-2" ng-show="funobj.hasOwnProperty('integral')">
+							<a ng-click="addjf()" class="btn btn-success btn-sm"
+							>添加</a>
+						</div>
+					</div>
+
+					<table class="table table-bordered">
+					    <thead>
+					      <tr>
+					        <th class="col-md-6 text-center">销售品类型</th>
+					        <th class="col-md-2 text-center">积分</th>
+					        <th class="col-md-2 text-center" ng-show="funobj.hasOwnProperty('integral')">操作</th>
+					      </tr>
+					    </thead>
+					    <tbody>
+					      <tr ng-repeat="obj in salejfobj.list">
+					        <td class="text-center" ng-show="obj.integral_type == 0">提现积分</td>
+					        <td class="text-center" ng-show="obj.integral_type == 1">抵值积分</td>
+					        <td class="text-center">
+					          <input type="text" class="btn btn-block btn-default" placeholder="积分" ng-model="obj.integral_price" />
+					        </td>
+					        <td class="text-center" ng-show="funobj.hasOwnProperty('integral')">
+					          	<a 	ng-click="deljf(obj.id)" 
+					          		class="btn btn-warning btn-xs">
+					          		删除
+					        	</a>
+					        </td>
+					      </tr>
+					    </tbody>
+				  	</table>
+
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
 
 <div class="col-xs-12 " ng-show="funobj.hasOwnProperty('govsubsidy')">
 	<div class="panel panel-default form-horizontal">
