--- a/app/14statistics/views/staticonline.html
+++ b/app/14statistics/views/staticonline.html
@@ -82,7 +82,7 @@
       	max-size="maxSize" 
       	class="pagination-sm" 
       	boundary-links="true" 
-      	ng-change="searchinfo()"
+      	ng-change="load()"
       	items-per-page="itemsPerPage"
       	previous-text="上一页"
       	next-text="下一页"
