--- a/app/22busscustomer/views/usedorderlist.html
+++ b/app/22busscustomer/views/usedorderlist.html
@@ -16,9 +16,6 @@
                   <input type="text" class="form-control" ng-model="searchform.business_code"  placeholder="商家编号">
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
-                  <input type="text" class="form-control" ng-model="searchform.mobile"  placeholder="手机号">
-                  &nbsp;&nbsp;&nbsp;&nbsp;
-
                   <input type="text" class="form-control" ng-model="searchform.verification_code"  placeholder="验证码">
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
@@ -42,7 +39,7 @@
                   </div>
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
-                  <label class="control-label">订单状态：</label>
+                  <label class="control-label">支付状态：</label>
                   <select class="form-control" ng-model="searchform.pay_state">
                     <option label="未支付" value="0"></option>
                     <option label="已支付" value="1"></option>
@@ -66,14 +63,13 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-2 text-center">订单名称</th>
+        <th class="col-md-3 text-center">订单名称</th>
         <th class="col-md-1 text-center">订单编号</th>
         <th class="col-md-2 text-center">商家信息</th>
-        <th class="col-md-1 text-center">游客信息</th>
-        <th class="col-md-1 text-center">数量</th>
-        <th class="col-md-2 text-center">验证码</th>
-        <th class="col-md-1 text-center">下单时间</th>
-        <th class="col-md-1 text-center">订单状态</th>
+        <th class="col-md-1 text-center">验证码</th>
+        <th class="col-md-2 text-center">下单时间</th>
+        <th class="col-md-1 text-center">支付状态</th>
+        <th class="col-md-1 text-center">支付金额</th>
         <th class="col-md-1 text-center">操作</th>
       </tr>
     </thead>
@@ -81,18 +77,13 @@
       <tr ng-repeat="obj in objs">
         <td class="">{{obj.title}}</td>
         <td class="text-center">{{obj.code}}</td>
-        <td class="text-center">{{obj.business_code}}<br>{{obj.name}}</td>
-        <td class="text-center">{{obj.mobile}}</td>
-        <td class="text-center">
-          <span>购买{{obj.num}}</span><br>
-          <span>使用{{obj.used}}</span>
-        </td>
+        <td class="text-center">{{obj.business_code}}<br>{{obj.business_name}}</td>
         <td class="text-center">{{obj.verification_code}}</td>
         <td class="text-center">{{obj.create_time}}</td>
         <td class="text-center">{{obj.statename}}</td>
+        <td class="text-center">{{obj.pay_price  * 0.01 | currency : '￥'}}</td>
         <th class="text-center">
-          <a ng-click="voucherinfo(obj.code)" class="btn btn-success btn-xs" ng-show="obj.pay_state=='1'">码信息</a>
-          <a ng-click="orderinfo(obj)" class="btn btn-info btn-xs">订单详情</a>
+          <a ng-click="usedorderinfo(obj)" class="btn btn-info btn-xs">订单详情</a>
         </th>
       </tr>
     </tbody>
