--- a/app/22busscustomer/views/voucherinfo.html
+++ b/app/22busscustomer/views/voucherinfo.html
@@ -18,6 +18,7 @@
                 <th class="col-md-2 text-center">可用</th>
                 <th class="col-md-2 text-center">使用方式</th>
                 <th class="col-md-2 text-center">使用时间</th>
+                <th class="col-md-2 text-center">操作</th>
               </tr>
             </thead>
             <tbody>
@@ -33,6 +34,9 @@
                 </td>
                 <td class="text-center">{{obj.used_typename}}</td>
                 <td class="text-center">{{obj.otime}}</td>
+                <td class="text-center">
+                	<a ng-click="usedinfo(obj.code)" class="btn btn-info btn-xs" ng-show="obj.used_type=='1'">查看使用详情</a>
+            	</td>
               </tr>
             </tbody>
           </table>
