--- a/app/22busscustomer/views/addgoodtype.html
+++ b/app/22busscustomer/views/addgoodtype.html
@@ -8,10 +8,10 @@
 		<label class="col-xs-3 control-label">商品类型:</label>
 		<div class="col-xs-7">
 			<input type="text" class="form-control" 
-			ng-model="info.goods_id"
+			ng-model="info.label"
 			>
 		</div>
-		<button type="button" class="btn btn-info" ng-click="savegoodforyou()">确定<button>
+		<button type="button" class="btn btn-info" ng-click="addtype()">确定<button>
 		</div>
 	</div>
 </div>
